[FIX] website: keep language selector flag size ratio
There was an issue before this commit where some flags (basically all
the ones which are not tribands) would appear "broken".
This is the case for the China one where the symbol on the flag would be
squashed.
Using `object-fit` css property will keep the original flag ratio.

task-2929438

closes odoo/odoo#119555

X-original-commit: 32aca11122af1aa4dae4bee5e3e25e9f6ac6c737

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1428,6 +1428,7 @@ header {
     height: 1em;
     margin-right: 0.2em;
     border-radius: $rounded-pill;
+    object-fit: cover;
 }
 a.js_change_lang:hover, a.o_add_language:hover {
     text-decoration: none;
